--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://caitlineelliott.github.io/react-calculator",
+  "homepage": "http://caitlineelliott.github.io/React-Calculator",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +11,7 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3010 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
